# Anime_Recommendation

./: .gitignore  README.md  app.py  data_ingestion.py  data_ingestion_chroma.py  debug_env.py  dummy.py  langgraph.json  main.py  pyproject.toml  test_embeddings.py  test_search.py  test_ui.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data ingestion/: data_ingestion_chroma.py
demo/: README.md
graph/: chains.py  graph.py  nodes.py  schemas.py  state.py
ui/: components.py
utils/: api_utils.py  vectore_search.py
